fix AOS not work on mobile

--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -22,6 +22,12 @@ body {
   }
 }
 
+html, body{
+  @media only screen and (max-width : 768px) {
+    overflow-x:hidden;
+  }
+}
+
 a {
   font-weight: 300;
   color: $link-color;
